...
      context: context,
      builder: (_) => AlertDialog(
        title: const Text('Detail Tonase'),
        content: SingleChildScrollView(
          child: Column(
...
        actions: [
          TextButton(
            key: Key('close-viewDetails'),
            onPressed: () => Navigator.pop(context),
            child: const Text('Close'),
...
      }
      await batch.commit();
      _showMessage('Data Berhasil di Kirim.');
      await _loadTonase();
    } catch (e) {
...
      appBar: AppBar(
        leading: IconButton(
          key: Key('menu-button'),
          icon: Icon(Icons.menu),
          onPressed: () {
...
        ),
        title: const Text(
          "TONASE",
          style: TextStyle(fontWeight: FontWeight.bold),
        ),
...
      children: [
        TextField(
          key: Key('date-filter-field'),
          controller: _dateRangeController,
          readOnly: true,
...
            ? const Center(child: CircularProgressIndicator())
            : DropdownButtonFormField<AreaModel>(
                key: Key('area-dropdown-filter'),
                initialValue: _selectedArea,
                decoration: InputDecoration(
...
            children: [
              ElevatedButton.icon(
                key: Key('add-tonase-button'),
                onPressed: _onAdd,
                icon: const Icon(Icons.add),
...
              const SizedBox(width: 5),
              ElevatedButton.icon(
                key: Key('clear-button'),
                onPressed: _clearFilters,
                icon: const Icon(Icons.filter_alt_off),
...
              const SizedBox(width: 5),
              ElevatedButton.icon(
                key: Key('mark-button'),
                onPressed: _handleMarkAsSend,
                icon: const Icon(Icons.send),
...
          child: SingleChildScrollView(
            child: PaginatedDataTable(
              key: Key('home-data-table'),
              header: Row(
                mainAxisAlignment: MainAxisAlignment.spaceBetween,
                children: [
                  const Text(
                    'Data Tonase',
                    style: TextStyle(fontSize: 18, fontWeight: FontWeight.bold),
                  ),
...
                    width: 180,
                    child: TextField(
                      key: Key('search-field'),
                      controller: _searchController,
                      decoration: InputDecoration(
...
                        prefixIcon: const Icon(Icons.search),
                        suffixIcon: IconButton(
                          key: Key('clear-search'),
                          icon: const Icon(Icons.clear),
                          onPressed: () {
...
          ),
          ListTile(
            key: Key('area-menu-button'),
            leading: const Icon(Icons.map, color: Colors.blueAccent),
            title: const Text('Data Area'),
...
          ),
          ListTile(
            key: Key('customer-menu-button'),
            leading: const Icon(Icons.people, color: Colors.green),
            title: const Text('Data Customer'),
...
          ),
          ListTile(
            key: Key('logout-button'),
            leading: const Icon(Icons.exit_to_app, color: Colors.red),
            title: const Text('Logout'),
...
          Center(
            child: PopupMenuButton<String>(
              key: Key('select-action'),
              icon: const Icon(Icons.arrow_drop_down),
              onSelected: (v) {
...
              itemBuilder: (_) => const [
                PopupMenuItem(
                  key: Key('viewDetails-button'),
                  value: 'viewDetails',
                  child: Row(
...
                ),
                PopupMenuItem(
                  key: Key('edit-button'),
                  value: 'edit',
                  child: Row(
...
                ),
                PopupMenuItem(
                  key: Key('delete-button'),
                  value: 'delete',
                  child: Row(
...
